--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body class="root">
     <div class="root__content">
         <header class="header">
-            <h1 class="header__title">М-П</h1>
+            <!-- <h1 class="header__title">М-П</h1> -->
+            <img class="header__logo" src="./images/logo.png">
         </header>
         <main class="content"></main>
         <footer class="footer">
