style: добавить alt к логотипу

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="root__content">
         <header class="header">
             <!-- <h1 class="header__title">М-П</h1> -->
-            <img class="header__logo" src="./images/logo.png">
+            <img class="header__logo" src="./images/logo.png" alt="Логотип проекта мачу-пикчу">
         </header>
         <main class="content"></main>
         <footer class="footer">
