--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <main class="content"></main>
         <footer class="footer">
             <ul class="footer__links">
-                <li><a class="footer__link" href="https://t.me/Machupiccu" target="_blank">Телеграм</a></li>
+                <li><a class="footer__link" href="https://t.me/Machupiccu" target="_blank">телеграм</a></li>
             </ul>
         </footer>
     </div>
